gold linker v2.22: Remove unnecessary assertions

Fixes this error: internal error in relocate_tls
Reported as binutils bug 13359
<http://sourceware.org/bugzilla/show_bug.cgi?id=13359>
Applied to trunk 2011-10-31
Backported to 2.22 branch on 2011-12-19